fixed alignment of image on smaller screens

--- a/bruinfitness/src/components/home/HomeTwoColumn.css
+++ b/bruinfitness/src/components/home/HomeTwoColumn.css
@@ -23,4 +23,7 @@
     padding-left: 1rem;
     padding-bottom: 1rem;
   }
+  .image-col-padding {
+    text-align: center;
+  }
 }
